--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@apollo/client": "^3.6.5",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.4",
@@ -10,6 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.25",
+    "graphql": "^16.5.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
